# archives

./: .gitignore  .mdformat.toml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  TODO.md  archive_manager.py  convert_archives.py  jedi_archives.json  jocasta.py  pre-commit-contents.txt  pyproject.toml  sith_archives.json  test.py
.github/workflows/: archive-process.yml
jedi/: meta.json  meta.toml
jedi/agricultural_studies/: meta.toml  meta.yaml
jedi/artifacts/: meta.toml  meta.yaml
jedi/combat_studies/: meta.toml  meta.yaml
jedi/core_worlds/: meta.toml  meta.yaml
jedi/culinary/: meta.toml  meta.yaml
jedi/deep_core_worlds/: meta.toml  meta.yaml
jedi/engineering/: meta.toml  meta.yaml
jedi/expansion_region/: meta.toml  meta.yaml
jedi/general_knowledge/: meta.toml  meta.yaml
jedi/historical_events/: meta.toml  meta.yaml
jedi/inner_rim_territories/: meta.toml  meta.yaml
jedi/mid_rim_territories/: meta.toml  meta.yaml
jedi/non_sentient_species/: meta.toml  meta.yaml
jedi/organizations/: meta.toml  meta.yaml
jedi/outer_rim_territories/: meta.toml  meta.yaml
jedi/persons_of_interest/: meta.toml  meta.yaml
jedi/philosophy_of_the_force/: meta.toml  meta.yaml
jedi/plagues_and_diseases/: meta.toml  meta.yaml
jedi/planetary_locations/: meta.toml  meta.yaml
jedi/scientific_studies/: meta.toml  meta.yaml
jedi/sentient_species/: meta.toml  meta.yaml
jedi/technological_studies/: meta.toml  meta.yaml
jedi/the_colonies_region/: meta.toml  meta.yaml
jocastas_backend/: __init__.py
sith/: meta.json  meta.toml
(+9240 files in other folders)
